--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Welcome To My Website</h1>
     <img src="trend/trend-1.jpg" alt="trend-1">
+    <img src="trend/trend-2.jpg"alt="">
 </body>
 </html>
