--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <h1>Welcome To My Website</h1>
     <img src="trend/trend-1.jpg" alt="trend-1">
     <img src="trend/trend-2.jpg"alt="">
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero nulla cumque mollitia aliquid culpa temporibus commodi soluta nostrum, fugiat reprehenderit provident, explicabo non unde, pariatur est earum reiciendis vel numquam.</p>
+    <img src="trend/trend-3.jpg" alt="trend3">
 </body>
 </html>
