--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
     <img src="trend/trend-2.jpg"alt="">
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero nulla cumque mollitia aliquid culpa temporibus commodi soluta nostrum, fugiat reprehenderit provident, explicabo non unde, pariatur est earum reiciendis vel numquam.</p>
     <img src="trend/trend-3.jpg" alt="trend3">
+    <img src="trend/insta6.jpg">
+    <img src="trend/insta7.jpg">
 </body>
 </html>
